samples/_failures_safe/1761077903_974ee6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0233d256.c: In function ‘tokenize’:
./samples/SAFE/__tmp_0233d256.c:172:9: error: expected expression at end of input
  172 |         else if (parse_string(input, &pos, &
      |         ^~~~
./samples/SAFE/__tmp_0233d256.c:172:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0233d256.c:172:9: error: expected declaration or statement at end of input
